Assistant checkpoint: Fix select all checkbox functionality
Assistant generated file changes:
- gerenciador-documentos/peticoes/peticoes.html: Fix select all checkbox binding
- gerenciador-documentos/peticoes/peticoes.ctrl.js: Fix select all functionality

---

User prompt:

Não funcionou. Ao selecionar o checkall os itens da lista não ficam selecionados. Provavelmente isso tem haver com o vm.allChecked que não existe.

--- a/gerenciador-documentos/peticoes/peticoes.html
+++ b/gerenciador-documentos/peticoes/peticoes.html
@@ -197,7 +197,7 @@
 		<div class="row">
 			<div class="col-md-12">
 				<div class="bth-checkbox bth-checkbox-inline">
-					<input type="checkbox" ng-model="selectAll" ng-change="checkAll()">
+					<input type="checkbox" ng-model="vm.selectAll" ng-change="vm.checkAll()">
 					<label for=""></label>
 				</div>
 				<div style="display: inline-block">
